minor edits for clarity

--- a/index.ipynb
+++ b/index.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "### Rosetta and emulation\n",
     "\n",
-    "Can't run the rosetta intel emulation and the M1 chip at the same time. This [video](https://www.youtube.com/watch?v=BEUU-icPg78) by Jeff Heaton traces where the error comes from.\n",
+    "You cannot run the rosetta intel emulation and the M1 chip at the same time. This [video](https://www.youtube.com/watch?v=BEUU-icPg78) by Jeff Heaton traces where the error comes from.\n",
     "\n",
     "\n",
     "```\n",
@@ -98,11 +98,11 @@
    "source": [
     "The intermediate steps.\n",
     "\n",
-    "7.  You can download the full [Anaconda](https://docs.anaconda.com/anaconda/install/mac-os/) or [Miniconda](https://docs.conda.io/en/latest/miniconda.html). Since using Miniconda gives us more control, we'll download the latter. For Miniconda, there are a number of options for macOS, make sure to download the correct package. N.B. If you download the intel package, Python will still work via Rosetta emulating the intel chip, but TensorFlow will still not work since you'll be missing `tensorflow-deps`. Ergo, downloand this correct M1 package:\n",
+    "7.  You can download the full [Anaconda](https://docs.anaconda.com/anaconda/install/mac-os/) or [Miniconda](https://docs.conda.io/en/latest/miniconda.html). Since using Miniconda gives you more control, you will download the latter. For Miniconda, there are a number of options for macOS, make sure to download the correct package. N.B. If you download the intel package, Python will still work via Rosetta emulating the intel chip, but TensorFlow will still not work since you'll be missing `tensorflow-deps`. Ergo, downloand this correct M1 package:\n",
     "\n",
     "> **Miniconda3 macOS Apple M1 ARM 64-bit pkg**\n",
     "\n",
-    "8.  The file will be called **Miniconda3-LATEST-MacOSX-arm64.pgk**, where we know we dowloaded the correct one since we see \"arm\" in the name of the package. So run the installer.\n",
+    "8.  The file will be called **Miniconda3-LATEST-MacOSX-arm64.pgk**, where you know you dowloaded the correct one since you see \"arm\" in the name of the package. So run the installer.\n",
     "*   At times, Miniconda changes the \"verbiage\" of the names of the packages, but they should be easily identifiable.\n",
     "*   When running the install, make sure to change the location of the disk\n",
     "*   Change to **Install for me only**\n",
@@ -158,22 +158,22 @@
    "source": [
     "This steps are layed out in more detail in this GitHub [repo](https://github.com/learn-co-curriculum/dsc-data-science-env-config).\n",
     "\n",
-    "13.  Clone the the [dsc-m1tf repo](https://github.com/learn-co-curriculum/dsc-m1tf) and cd to this repo.\n",
-    "14.  Create the conda environment by running the following in the Terminal, which takes a litle while since we're downloading all of the packages that we need. Most importantly for getting TensorFlow to work on the M1/M2 chip, within the **yaml** file, under *Channel* we have `apple`, under *Dependencies* we have `tensorflow-deps`, and under *pip* we have `ternsorflow-macos` and `tensorflow-metal`.\n",
+    "13.  Clone the this [dsc-m1tf repo](https://github.com/learn-co-curriculum/dsc-m1tf) and cd into this repo.\n",
+    "14.  Create the conda environment by running the following in the Terminal, which takes a litle while since you are downloading all of the packages that you need. Most importantly for getting TensorFlow to work on the M1/M2 chip, within the **yaml** file, under *Channel* you have `apple`, under *Dependencies* you have `tensorflow-deps`, and under *pip* you have `ternsorflow-macos` and `tensorflow-metal`.\n",
     "```\n",
     "conda env create --name learn-env-m1tf -f mac_environment.yml\n",
     "```\n",
     "      *N.B.*: I had to downgrade the versions of `tensorflow-macos` and `tensorflow-metal`, viz. to 2.9 and 0.5.0, respectively, to get `model.fit()` to work correctly. Also, in the above GitHub link this is now called `mac_environment_tf.yml`.\n",
-    "15.  *Sanity check.* To confirm that this worked, run `conda activate learn-env` back in \"(base)\". You should see that you change from \"(base)\" to \"(learn-env)\" and then verify by running `conda info --envs`; an asterisk next to learn-env confirms that this worked.\n",
+    "15.  *Sanity check.* To confirm that this worked, run `conda activate learn-env-m1tf` back in \"(base)\". You should see that you change from \"(base)\" to \"(learn-env-m1tf)\" and then verify by running `conda info --envs`; an asterisk next to learn-env-m1tf confirms that this worked.\n",
     "16.  Now set-up default environment. See the repo for `bash`, here it is for `zsh`\n",
     "```\n",
     "echo \"conda activate learn-env\" >> ~/.zshrc\n",
     "source ~/.zshrc\n",
     "```\n",
-    "16.  We now need to register the environment so that learn-env shows up as a kernel when we run jupyter\n",
+    "16.  You now need to register the environment so that learn-env-m1tf shows up as a kernel when we run jupyter\n",
     "```\n",
-    "conda activate learn-env\n",
-    "python -m ipykernel install --user --name learn-env --display-name \"Python (learn-env)\"\n",
+    "conda activate learn-env-m1tf\n",
+    "python -m ipykernel install --user --name learn-env --display-name \"Python (learn-env-m1tf)\"\n",
     "```\n",
     "\n",
     "\n"
@@ -290,9 +290,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
